# bumpversion-action

./: .bumpversion.cfg  .editorconfig  .gitignore  .mailmap  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  action.yml  bumpver.toml  entrypoint.sh  pyproject.toml
.github/workflows/: main.yml  release.yml
scripts/: check-poetry-exist.sh  setup-poetry.sh
