[tool.poetry]
name = "bumpversion-action"
version = "0.1.24"
description = ""
authors = ["ouhammou rachid <93659459+ouhammmourachid@users.noreply.github.com>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.10"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
